--- a/app/css/app.css
+++ b/app/css/app.css
@@ -5,7 +5,7 @@ body {
 }
 
 
-.phone-images {
+.zombie-images {
   width: 450px;
   height: 450px;
   overflow: hidden;
@@ -13,7 +13,7 @@ body {
   float: left;
 }
 
-.phones {
+.zombies {
   list-style: none;
 }
 
@@ -21,18 +21,18 @@ body {
   float: left;
   margin: -1em 1em 1.5em 0em;
   padding-bottom: 1em;
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
 }
 
-.phones li {
+.zombies li {
   clear: both;
   height: 100px;
   padding-top: 15px;
 }
 
 /** Detail View **/
-img.phone {
+img.zombie {
   float: left;
   margin-right: 3em;
   margin-bottom: 2em;
@@ -42,25 +42,25 @@ img.phone {
   width: 400px;
 }
 
-ul.phone-thumbs {
+ul.zombie-thumbs {
   margin: 0;
   list-style: none;
 }
 
-ul.phone-thumbs li {
+ul.zombie-thumbs li {
   border: 1px solid black;
   display: inline-block;
   margin: 1em;
   background-color: white;
 }
 
-ul.phone-thumbs img {
+ul.zombie-thumbs img {
   height: 100px;
   width: 100px;
   padding: 1em;
 }
 
-ul.phone-thumbs img:hover {
+ul.zombie-thumbs img:hover {
   cursor: pointer;
 }
 
